all drawables -> vector; upd help

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -64,7 +64,9 @@
                 android:background="@color/toolbarColor"
                 app:contentInsetLeft="0dp"
                 app:contentInsetRight="0dp"
-                app:contentInsetStart="0dp" app:contentInsetStartWithNavigation="0dp" app:contentInsetEnd="0dp"
+                app:contentInsetStart="0dp"
+                app:contentInsetStartWithNavigation="0dp"
+                app:contentInsetEnd="0dp"
                 app:contentInsetEndWithActions="0dp">
             <LinearLayout
                     android:orientation="vertical"
