--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -67,7 +67,8 @@
                 app:contentInsetStart="0dp"
                 app:contentInsetStartWithNavigation="0dp"
                 app:contentInsetEnd="0dp"
-                app:contentInsetEndWithActions="0dp">
+                app:contentInsetEndWithActions="0dp"
+        >
             <LinearLayout
                     android:orientation="vertical"
                     android:layout_width="match_parent"
