--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -29,6 +29,7 @@
     </string-array>
 
     <string-array name="speeds">
+        <item>0.3</item>
         <item>1</item>
         <item>2</item>
         <item>5</item>
