--- a/app/src/main/res/layout/choose_color_row.xml
+++ b/app/src/main/res/layout/choose_color_row.xml
@@ -3,19 +3,22 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
     <ImageView
             android:id="@+id/group_color"
             app:srcCompat="@android:color/transparent"
             android:contentDescription="group color"
-            android:layout_width="100dp"
-            android:layout_height="match_parent"
+            android:padding="8dp"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:layout_weight="1"
     />
-    <ListView
+    <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/circle_group"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-    </ListView>
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+    >
+    </androidx.recyclerview.widget.RecyclerView>
 </LinearLayout>
