--- a/app/src/main/res/layout/choose_color_dialog.xml
+++ b/app/src/main/res/layout/choose_color_dialog.xml
@@ -1,21 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
 >
+    <!-- TODO: remove magic height -->
     <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/color_groups"
             android:scrollbars="vertical"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp"
+            android:layout_height="500dp"
+            android:layout_margin="8dp"
     />
-            <!--app:layout_constraintTop_toTopOf="parent"-->
-            <!--app:layout_constraintBottom_toBottomOf="parent"-->
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
