--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -13,12 +13,12 @@
                 android:title="@string/redraw_trace_title"
                 android:summary="@string/redraw_trace_summary"/>
         <!-- NOTE: advanced -->
-        <SwitchPreference
-                android:key="show_all_circles"
-                android:defaultValue="false"
-                android:title="@string/show_all_circles_title"
-                android:summary="@string/show_all_circles_summary"
-        />
+        <!--<SwitchPreference-->
+                <!--android:key="show_all_circles"-->
+                <!--android:defaultValue="false"-->
+                <!--android:title="@string/show_all_circles_title"-->
+                <!--android:summary="@string/show_all_circles_summary"-->
+        <!--/>-->
         <!-- NOTE: advanced -->
         <!--<SwitchPreference-->
                 <!--android:key="show_centers"-->
@@ -73,11 +73,11 @@
                 <!--android:max="50"-->
         <!--/>-->
         <!-- NOTE: advanced -->
-        <SwitchPreference
-                android:key="show_stat"
-                android:defaultValue="false"
-                android:title="@string/show_stat_title"
-        />
+        <!--<SwitchPreference-->
+                <!--android:key="show_stat"-->
+                <!--android:defaultValue="false"-->
+                <!--android:title="@string/show_stat_title"-->
+        <!--/>-->
         <!-- MAYBE: delete -->
         <!-- QUESTION: UPS/FPS > 100 = 100? -->
         <!--<com.pavelsikun.seekbarpreference.SeekBarPreferenceCompat-->
