--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
     <color name="colorPrimary">#008577</color>
     <color name="toolbarColor">#008577</color>
     <color name="darkerToolbarColor">#007368</color>
+    <color name="progressBarColor">#D81B60</color>
     <!--<color name="toolbarColor">#e0008577</color>-->
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
