--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
     <string-array name="shapes_declensions">
         <item>circle</item>
         <item>square</item>
@@ -36,5 +37,24 @@
         <item>10</item>
         <item>20</item>
         <item>30</item>
+        <item>50</item>
     </string-array>
+
+    <string-array name="preview_sizes">
+        <item>50</item>
+        <item>100</item>
+        <item>200</item>
+        <item>300</item>
+    </string-array>
+    <string-array name="preview_updates">
+        <item>10</item>
+        <item>20</item>
+        <item>50</item>
+        <item>100</item>
+        <item>200</item>
+        <item>300</item>
+        <item>400</item>
+        <item>500</item>
+    </string-array>
+
 </resources>
