--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -47,6 +47,8 @@
         <item>250</item>
         <item>300</item>
         <item>400</item>
+        <item>500</item>
+        <item>600</item>
     </string-array>
     <string-array name="preview_updates">
         <item>10</item>
@@ -57,6 +59,8 @@
         <item>300</item>
         <item>400</item>
         <item>500</item>
+        <item>750</item>
+        <item>1000</item>
     </string-array>
 
 </resources>
