--- a/app/src/main/res/layout/choose_color_row.xml
+++ b/app/src/main/res/layout/choose_color_row.xml
@@ -1,25 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<androidx.constraintlayout.widget.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="horizontal"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
 >
-
+<!-- maybe: use ChipGroup instead of RecyclerView -->
+    <CheckBox
+            android:id="@+id/circle_checkbox"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+    />
     <ImageView
-            android:id="@+id/group_color"
-            app:srcCompat="@android:color/transparent"
-            android:contentDescription="group color"
+            android:id="@+id/circle_image"
+            android:src="@drawable/circle_image"
+            android:contentDescription="circle_image"
             android:padding="8dp"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_weight="1"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/circle_checkbox"
+            android:layout_marginStart="16dp"
     />
-    <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/circle_group"
-            android:layout_width="match_parent"
+    <TextView
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-    >
-    </androidx.recyclerview.widget.RecyclerView>
-</LinearLayout>
+            android:id="@+id/circle_name"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/circle_image"
+            android:layout_marginStart="24dp"
+            android:text="#"
+    />
+</androidx.constraintlayout.widget.ConstraintLayout>
