--- a/app/src/main/res/layout/edit_circle.xml
+++ b/app/src/main/res/layout/edit_circle.xml
@@ -3,30 +3,36 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
 >
     <ImageButton
             android:id="@+id/circle_color"
             android:src="@drawable/ic_filled_circle"
             android:contentDescription="filled_circle"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_margin="8dp"
     />
     <Switch
             android:id="@+id/circle_fill"
+            android:text="Fill"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_margin="8dp"
     />
     <Switch
             android:id="@+id/circle_has_border_color"
+            android:text="Different border color"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_margin="8dp"
     />
     <ImageButton
             android:id="@+id/circle_border_color"
             android:src="@drawable/ic_circle"
             android:contentDescription="thin_circle"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_margin="8dp"
     />
 </LinearLayout>
