--- a/app/src/main/res/layout/edit_circle.xml
+++ b/app/src/main/res/layout/edit_circle.xml
@@ -7,7 +7,7 @@
 >
     <ImageButton
             android:id="@+id/circle_color"
-            android:src="@drawable/ic_filled_circle"
+            android:src="@drawable/ic_filled_circle_40dp"
             android:contentDescription="filled_circle"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
@@ -20,17 +20,17 @@
             android:layout_height="match_parent"
             android:layout_margin="8dp"
     />
-    <Switch
-            android:id="@+id/circle_has_border_color"
-            android:text="Different border color"
+    <ImageButton
+            android:id="@+id/circle_border_color"
+            android:src="@drawable/ic_circle_40dp"
+            android:contentDescription="thin_circle"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_margin="8dp"
     />
-    <ImageButton
-            android:id="@+id/circle_border_color"
-            android:src="@drawable/ic_circle"
-            android:contentDescription="thin_circle"
+    <Switch
+            android:id="@+id/circle_has_border_color"
+            android:text="Different border color"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_margin="8dp"
