--- a/app/src/main/res/layout/choose_color_dialog.xml
+++ b/app/src/main/res/layout/choose_color_dialog.xml
@@ -5,12 +5,49 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
 >
+    <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="8dp"
+    >
+        <CheckBox
+                android:id="@+id/all_circles_checkbox"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="4dp"
+        />
+        <ToggleButton
+                android:id="@+id/sort_by_color"
+                android:background="@null"
+                android:button="@drawable/sort_order"
+                android:layout_width="24dp"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="30dp"
+                android:checked="true"
+                android:padding="8dp"
+                android:textOn=""
+                android:textOff=""
+        />
+        <ToggleButton
+                android:id="@+id/sort_by_name"
+                android:background="@null"
+                android:button="@drawable/sort_order"
+                android:layout_width="24dp"
+                android:layout_height="wrap_content"
+                android:padding="8dp"
+                android:textOn=""
+                android:textOff=""
+        />
+    </LinearLayout>
     <!-- TODO: remove magic height -->
     <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/color_groups"
             android:scrollbars="vertical"
             android:layout_width="match_parent"
-            android:layout_height="500dp"
+            android:layout_height="400dp"
             android:layout_margin="8dp"
     />
 
