expand/collapse done; doing sorting

--- a/app/src/main/res/layout/choose_color_dialog.xml
+++ b/app/src/main/res/layout/choose_color_dialog.xml
@@ -54,5 +54,6 @@
             android:layout_height="400dp"
             android:layout_margin="8dp"
     />
+    <View style="@style/dividerHorizontal"/>
 
 </LinearLayout>
