--- a/app/src/main/res/layout/choose_color_row.xml
+++ b/app/src/main/res/layout/choose_color_row.xml
@@ -39,7 +39,8 @@
                 app:layout_constraintTop_toTopOf="parent"
                 android:layout_marginBottom="8dp"
                 app:layout_constraintBottom_toBottomOf="parent"
-                android:layout_marginStart="16dp"
+                android:layout_marginStart="8dp"
+                app:layout_constraintStart_toStartOf="parent"
         />
         <TextView
                 android:layout_width="wrap_content"
@@ -54,4 +55,27 @@
                 android:text="#"
         />
     </androidx.constraintlayout.widget.ConstraintLayout>
+    <ToggleButton
+            android:id="@+id/expand_group"
+            android:background="@color/lightGray"
+            android:button="@drawable/expand_group"
+            android:checked="false"
+            android:layout_width="24dp"
+            android:layout_height="wrap_content"
+            android:paddingTop="8dp"
+            android:paddingBottom="8dp"
+            android:paddingStart="24dp"
+            android:paddingEnd="24dp"
+            android:textOn=""
+            android:textOff=""
+            android:contentDescription="Expand/collapse group"
+            android:layout_marginStart="24dp"
+            app:layout_constraintStart_toEndOf="@+id/circle_layout"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toEndOf="parent"
+    />
 </androidx.constraintlayout.widget.ConstraintLayout>
