--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -41,6 +41,9 @@
     </string-array>
 
     <string-array name="preview_sizes">
+        <item>25</item>
+        <item>50</item>
+        <item>75</item>
         <item>100</item>
         <item>150</item>
         <item>200</item>
