--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -45,6 +45,7 @@
         <item>50</item>
         <item>75</item>
         <item>100</item>
+        <item>125</item>
         <item>150</item>
         <item>200</item>
         <item>250</item>
