adding show/hide circles

--- a/app/src/main/res/layout-w240dp/edit_circle.xml
+++ b/app/src/main/res/layout-w240dp/edit_circle.xml
@@ -5,6 +5,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
 >
+    <Switch
+            android:id="@+id/circle_show"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:checked="true"
+            android:text="Show/hide"
+            android:layout_margin="8dp"
+            android:padding="8dp"
+    />
     <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
