--- a/app/src/main/res/layout/choose_color_row.xml
+++ b/app/src/main/res/layout/choose_color_row.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:orientation="horizontal"
+        xmlns:tools="http://schemas.android.com/tools" android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
 >
@@ -18,14 +18,36 @@
             android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
     />
+    <ToggleButton
+            android:id="@+id/circle_visibility"
+            android:background="@color/lightGray"
+            android:button="@drawable/circle_visibility"
+            android:checked="true"
+            android:layout_width="24dp"
+            android:layout_height="wrap_content"
+            android:paddingTop="8dp"
+            android:paddingBottom="8dp"
+            android:paddingStart="24dp"
+            android:paddingEnd="24dp"
+            android:textOn=""
+            android:textOff=""
+            android:contentDescription="@string/circle_visibility_description"
+            app:layout_constraintStart_toEndOf="@+id/circle_checkbox"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+    />
     <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/circle_layout"
             android:orientation="horizontal"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            app:layout_constraintStart_toEndOf="@id/circle_checkbox"
-            android:layout_marginStart="8dp"
             android:contentDescription="@string/circle_layout_description"
+            tools:layout_editor_absoluteY="0dp"
+            app:layout_constraintStart_toEndOf="@+id/circle_visibility"
+            android:layout_marginStart="16dp"
     >
         <ImageView
                 android:id="@+id/circle_image"
@@ -56,27 +78,6 @@
         />
     </androidx.constraintlayout.widget.ConstraintLayout>
     <ToggleButton
-            android:id="@+id/circle_visibility"
-            android:background="@color/lightGray"
-            android:button="@drawable/circle_visibility"
-            android:checked="true"
-            android:layout_width="24dp"
-            android:layout_height="wrap_content"
-            android:paddingTop="8dp"
-            android:paddingBottom="8dp"
-            android:paddingStart="24dp"
-            android:paddingEnd="24dp"
-            android:textOn=""
-            android:textOff=""
-            android:contentDescription="Hide/show circle"
-            app:layout_constraintStart_toEndOf="@+id/circle_layout"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-    />
-    <ToggleButton
             android:id="@+id/expand_group"
             android:background="@color/lightGray"
             android:button="@drawable/expand_group"
@@ -94,7 +95,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginTop="8dp"
             app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginEnd="8dp"
+            android:layout_marginEnd="16dp"
             app:layout_constraintEnd_toEndOf="parent"
     />
 </androidx.constraintlayout.widget.ConstraintLayout>
