--- a/app/src/main/res/menu/ddu_chooser_context_menu.xml
+++ b/app/src/main/res/menu/ddu_chooser_context_menu.xml
@@ -3,4 +3,7 @@
     <item android:id="@+id/ddu_rename" android:title="@string/ddu_rename"/>
     <item android:id="@+id/ddu_delete" android:title="@string/ddu_delete"/>
     <item android:id="@+id/ddu_restore" android:title="@string/ddu_restore"/>
+    <item android:id="@+id/ddu_duplicate" android:title="Duplicate"/>
+    <item android:id="@+id/ddu_export" android:title="Export"/>
+    <item android:id="@+id/ddu_export_for_dodecalook" android:title="Export for DodecaLook"/>
 </menu>
