--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -102,6 +102,12 @@
                 android:title="@string/preview_size_title"
                 android:summary="@string/preview_size_summary"
         />
+        <SwitchPreference
+                android:key="autocenter_preview"
+                android:defaultValue="@bool/autocenter_preview"
+                android:title="@string/autocenter_preview_title"
+                android:summary="@string/autocenter_preview_summary"
+        />
         <ListPreference
                 android:key="n_preview_updates"
                 android:defaultValue="@string/n_preview_updates"
