--- a/app/src/main/res/layout/choose_color_row.xml
+++ b/app/src/main/res/layout/choose_color_row.xml
@@ -64,17 +64,21 @@
                 android:layout_marginStart="8dp"
                 app:layout_constraintStart_toStartOf="parent"
         />
+        <!-- ISSUE: on small phones overlapping between circle_name and expand_group -->
+        <!-- MAYBE: customize textSize -->
         <TextView
+                android:id="@+id/circle_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/circle_name"
                 android:layout_marginTop="8dp"
                 app:layout_constraintTop_toTopOf="parent"
                 android:layout_marginBottom="8dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/circle_image"
-                android:layout_marginStart="24dp"
+                android:layout_marginStart="16dp"
                 android:text="@string/circle_name_initial_text"
+                android:textSize="@dimen/small_text_size"
+                android:ellipsize="end"
         />
     </androidx.constraintlayout.widget.ConstraintLayout>
     <ToggleButton
@@ -95,7 +99,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginTop="8dp"
             app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginEnd="16dp"
+            android:layout_marginEnd="4dp"
             app:layout_constraintEnd_toEndOf="parent"
     />
 </androidx.constraintlayout.widget.ConstraintLayout>
